force-app/main/default/objects/Campaign/fields/Archive_End__c.field-meta.xml
<CustomField>
    <fullName>Archive_End__c</fullName>
    <description>Time when the lobby closes for the archived/on-demand event</description>
    <label>Archive End</label>
    <type>DateTime</type>
</CustomField>