force-app/main/default/objects/Campaign/fields/Audience_Key__c.field-meta.xml
<CustomField>
    <fullName>Audience_Key__c</fullName>
    <description>Event key generated by ON24 platform</description>
    <label>Audience Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>