force-app/main/default/objects/Campaign/fields/Audience_Url__c.field-meta.xml
<CustomField>
    <fullName>Audience_Url__c</fullName>
    <description>URL to register and access the event</description>
    <label>Audience Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>