force-app/main/default/objects/Campaign/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial Automation</fullName>
            </value>
            <value>
                <fullName>Test &amp; Measurement</fullName>
            </value>
            <value>
                <fullName>Life Science</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>