force-app/main/default/objects/Campaign/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>