force-app/main/default/objects/Campaign/fields/Campaign_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Subtype__c</fullName>
    <label>Campaign Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>