force-app/main/default/objects/Campaign/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>ID of client account</description>
    <label>Client ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>