force-app/main/default/objects/Campaign/fields/Cost_Details__c.field-meta.xml
<CustomField>
    <fullName>Cost_Details__c</fullName>
    <label>Cost Details</label>
    <type>TextArea</type>
</CustomField>