force-app/main/default/objects/Campaign/fields/Create_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Create_Time_Stamp__c</fullName>
    <description>Date and time of when event was created</description>
    <label>Create Time Stamp</label>
    <type>DateTime</type>
</CustomField>