force-app/main/default/objects/Campaign/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <description>Event category</description>
    <label>Event Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>