force-app/main/default/objects/Campaign/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <description>Duration of event</description>
    <label>Event Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>