force-app/main/default/objects/Campaign/fields/Event_Tag_10__c.field-meta.xml
<CustomField>
    <fullName>Event_Tag_10__c</fullName>
    <description>Text used to tag event for sorting or tracking</description>
    <label>Event Tag 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>