force-app/main/default/objects/Campaign/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <description>Published Date and time of the event</description>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>