force-app/main/default/objects/Campaign/fields/Event_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Event_Time_Zone__c</fullName>
    <description>Displayed time zone of event</description>
    <label>Event Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>