force-app/main/default/objects/Campaign/fields/Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Title__c</fullName>
    <description>Title for the event</description>
    <label>Event Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>