force-app/main/default/objects/Campaign/fields/External_Costs__c.field-meta.xml
<CustomField>
    <fullName>External_Costs__c</fullName>
    <label>External Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>