force-app/main/default/objects/Campaign/fields/Internal_Costs__c.field-meta.xml
<CustomField>
    <fullName>Internal_Costs__c</fullName>
    <label>Internal Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>