force-app/main/default/objects/Campaign/fields/Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified__c</fullName>
    <description>Date and time when metadata like title, time or tags are updated</description>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>