force-app/main/default/objects/Campaign/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Date and time when event is created, new registrants, new attendees, poll response or survey is answered</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>