force-app/main/default/objects/Campaign/fields/Live_End__c.field-meta.xml
<CustomField>
    <fullName>Live_End__c</fullName>
    <description>Time when the lobby closes for the live events (users are no longer able to launch the event console)</description>
    <label>Live End</label>
    <type>DateTime</type>
</CustomField>