force-app/main/default/objects/Campaign/fields/Live_Start__c.field-meta.xml
<CustomField>
    <fullName>Live_Start__c</fullName>
    <description>Time when the lobby “opens” for the live event (when users are able to launch the event console)</description>
    <label>Live Start</label>
    <type>DateTime</type>
</CustomField>