force-app/main/default/objects/Campaign/fields/Presenters_URL__c.field-meta.xml
<CustomField>
    <fullName>Presenters_URL__c</fullName>
    <description>URL for presenters to manage the live event</description>
    <label>Presenters URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>