force-app/main/default/objects/Campaign/fields/Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>Preview_URL__c</fullName>
    <description>URL to preview the event console</description>
    <label>Preview URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>