force-app/main/default/objects/Campaign/fields/Registration_Page_Hits__c.field-meta.xml
<CustomField>
    <fullName>Registration_Page_Hits__c</fullName>
    <description>Number of registrants for event</description>
    <label>Registration Page Hits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>