force-app/main/default/objects/Campaign/fields/Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_URL__c</fullName>
    <description>URL to access reporting and analytic data from event</description>
    <label>Report URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>